tests/snapshots/integration__integration_tests__push__push_fast_forward.snap
---
source: tests/integration_tests/push.rs
info:
  program: wt
  args:
    - beta
    - push
    - main
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: "[TEST_GIT_CONFIG]"
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: "[TEST_CONFIG]"
---
success: true
exit_code: 0
----- stdout -----
🔄 [36mPushing 1 commit to [1m[36mmain[0m[36m @ [2m[SHA][0m
[107m [0m  * [SHA][33m ([m[1;36mHEAD[m[33m -> [m[1;32mfeature[m[33m)[m Add test file
[107m [0m   test.txt | 1 [32m+[m
[107m [0m   1 file changed, 1 insertion(+)
✅ [32mPushed to [1m[32mmain[0m[0m (1 commit, 1 file, [32m+1[0m)

----- stderr -----
